<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rugby Survive</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="consultar">Listar</string>
    <string name="insertar">Insertar</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="id">ID del jugador a modificar/eliminar: </string>
    <string name="nombre">Nombre del jugador a insertar: </string>
    <string name="img_principal">jugador</string>
</resources>