<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              tools:context=".MyActivity" >

    <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px" />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView" android:layout_gravity="center_horizontal"
            android:contentDescription="@string/img_principal" android:src="@drawable/principal"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:weightSum="1" android:layout_marginTop="16dp">

        <TextView
                android:id="@+id/etiquetaNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre" />

        <EditText
                android:id="@+id/casillaNombre"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text|none"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:weightSum="1" android:layout_marginTop="16dp">

        <TextView
                android:id="@+id/etiquetaId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id" />

        <EditText
                android:id="@+id/casillaId"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none|number" android:layout_weight="0.05">
        </EditText>

    </LinearLayout>

    <LinearLayout android:layout_height="wrap_content"
                  android:layout_width="match_parent"
                  android:orientation="horizontal" android:layout_marginTop="16dp" android:layout_marginBottom="16dp">

        <Button android:layout_height="wrap_content"
                android:text="@string/consultar"
                android:id="@+id/botonConsultar"
                android:layout_width="wrap_content" />
        <Button
                android:layout_height="wrap_content"
                android:text="@string/insertar"
                android:id="@+id/botonInsertar"
                android:layout_width="wrap_content" />
        <Button
                android:id="@+id/botonModificar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modificar" />
        <Button
                android:id="@+id/botonEliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eliminar" />
    </LinearLayout>

    <TextView android:id="@+id/TxtResultados"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:scrollbars = "vertical"
              android:text="" android:textColor="#ff0000" android:textIsSelectable="true"/>

</LinearLayout>
